--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<p><iframe width="100%" height="360" src="https://www.youtube-nocookie.com/embed/JCYL2qVFO6M?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></p>
 
 						<h3>Publication</h3>
-						<p>Nguyen-Vo, T., Riecke, B. E., Stuerzlinger, W., Pham. D.-M., &amp; Kruijff, E. (2019). NaviBoard and NaviChair: Limited Translation Combined with Full Rotation for Efficient Virtual Locomotion. Journal article published at <b>IEEE Transactions on Visualization and Computer Graphics (TVCG)</b>. <a href="https://doi.org/10.1109/TVCG.2019.2935730" target="_blank">https://doi.org/10.1109/TVCG.2019.2935730</a></p>
+						<p>Nguyen-Vo, T., Riecke, B. E., Stuerzlinger, W., Pham. D.-M., &amp; Kruijff, E. (2019). NaviBoard and NaviChair: Limited Translation Combined with Full Rotation for Efficient Virtual Locomotion. <b>Journal article</b> published at <b>IEEE Transactions on Visualization and Computer Graphics (TVCG)</b>. <a href="https://doi.org/10.1109/TVCG.2019.2935730" target="_blank">https://doi.org/10.1109/TVCG.2019.2935730</a></p>
 						<p>Nguyen-Vo, T., Riecke, B. E., Stuerzlinger, W., Pham, D.-M., &amp; Kruijff, E. (2018). Do We Need Actual Walking in VR? Leaning with Actual Rotation Might Suffice for Efficient Locomotion. Poster presented at Spatial Cognition 2018.</p>
 						
 						<!-- <ul class="actions">
@@ -54,12 +54,11 @@
 				<div class="inner">
 					<ul class="icons">
 						<li><a href="http://facebook.com/th.nguyenvo" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="http://thinh.nguyenvo.me" class="icon fa-globe"><span class="label">Homepage</span></a></li>
-						<li><a href="https://github.com/tnguyenv/" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:thinh@nguyenvo.me" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="http://thinh.ca" class="icon fa-globe"><span class="label">Homepage</span></a></li>
+						<li><a href="mailto:me@thinh.ca" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Thinh Nguyen-Vo</li>
+						<li>&copy; Ted Nguyen</li>
 					</ul>
 				</div>
 			</footer>
