add model image

--- a/index.html
+++ b/index.html
@@ -20,23 +20,28 @@
 
 				<!-- One -->
 					<section id="one">
-						<header class="major">
+						<!-- <header class="major">
 							<h2>Do We Need Actual Walking for Efficient VR Locomotion?</h2>
-						</header>
+						</header> -->
 
 						<p>Walking has always been considered as the gold standard for navigation in Virtual Reality research.&nbsp;Though full rotation is no longer a technical challenge, physical translation is still restricted through limited tracked areas. From a scientific perspective and while rotational information has been shown to be important, the benefit of the translational component is still unclear with mixed results in previous work. To address this gap, we conducted a mixed-method experiment to compare four levels of translational information: none (using the trackpad of the HTC Vive controller to virtually translate), upper-body leaning (sitting on a Swopper chair, leaning the upper-body to locomote), whole-body leaning (standing on a platform called NaviBoard, leaning the whole body or stepping one foot off the center to navigate), and full translational information (physically walking). Results showed that translational information had significant effects on various measures including task performance, task load, and simulator sickness. While participants performed significantly worse when they used a controller with no embodied translational cues, there was no significant difference between the leaning-based interfaces and walking. These results suggested that translational body-based information from a leaning-based interface might provide enough motion cues for efficient locomotion in VR.</p>
 
 						<h3>Keywords</h3>
 						<p>Spatial Orientation, Virtual Reality, Virtual Locomotion, Experimentation, Human Factors, Performance</p>
 
-						<h3>NaviBoard</h3>
+						<h2>Model and Design</h2>
+						<img src="images/model.jpg" width="100%">
+						
+						<h2>Prototype</h2>
 						<img src="images/naviboard.jpg" width="100%">
+
+						<h3>NaviBoard In Use</h3>
 						<p><iframe width="100%" height="360" src="https://www.youtube-nocookie.com/embed/wVKmLS4uD64?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></p>
 
-						<h3>Experiment Introduction</h3>
+						<h2>Experiment Task Explained</h2>
 						<p><iframe width="100%" height="360" src="https://www.youtube-nocookie.com/embed/XjglwECr6bA?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></p>
 						
-						<h3>Full Presentation</h3>
+						<h2>IEEE VR 2020</h2>
 						<p><iframe width="100%" height="360" src="https://www.youtube-nocookie.com/embed/JCYL2qVFO6M?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe></p>
 
 						<h3>Publication</h3>
